# ChangeLog for games-fps/quake1-soe
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> +quake1-soe-1.ebuild:
  New package.
