@@ -1,3 +1,3 @@
 DIST soe_full.zip 24190783 RMD160 a90d97c58c8450338bde7cba1ae1155626c77bb3 SHA1 ba98b961299a39f8eedacec0af33112a513912ca SHA256 9409c0debed303683964af869690583b53c2f0376471b3eed655b65e5f29b673
-EBUILD quake1-soe-1.ebuild 841 RMD160 7e27d00d546a4f68c6878630f2bab42f64fcba14 SHA1 b75ed6b7d3c518f594f8b0745030899122e5802a SHA256 7cb7b3d58b7a396f307f3e9f1698100820c2c9944e6ffe667c86c283e31f8056
-MISC ChangeLog 207 RMD160 437558f588173f994647fd3be37066e899f03f5c SHA1 8854ee01ae2a9961627ca35404f69a41a22f0525 SHA256 5d4ad4375d64980471cb4ffb12c9b2caf1220ff92fc2c54850983a5c30db2ac5
+EBUILD quake1-soe-1.ebuild 847 RMD160 4c81bf15311955e57d5a3cd00fa77bdfdba1ef5f SHA1 ae4bb0b8a01b9d500c10126ce2e2d55dbf81d789 SHA256 fa98515a9ecd92f6053a2c438950787ea3aa41c942690c41ad2943d033305816
+MISC ChangeLog 300 RMD160 c4632750eada97d15318623db825c8dc21770e96 SHA1 7df09e6f79dd761b7a43f145fb7e7d936c19c781 SHA256 27b190d170a45df51aae5cd549db63635351dcebc48ffc146fc2a3d9ba0e19e0
